# omni-challenge

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml  pytest.ini  setup.cfg
.envs/.sample/: .django  .postgres
apps/search/: admin.py  constants.py  model_managers.py  models.py  paginations.py  serializers.py  urls.py  views.py
apps/search/migrations/: 0001_initial.py  0002_remove_company_display_columns_and_more.py  0002_remove_employee_user.py  0003_company_display_columns.py
apps/search/services/: cache_utils.py  filters.py  limiters.py
apps/search/tests/: conftest.py  factories.py  test_views.py
docker/: Dockerfile  docker-compose.yml  start
omni/: urls.py
omni/settings/: base.py
requirements/: base.txt  local.txt
